--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "build": "tsc",
         "lint": "eslint . --ext .ts",
         "lint:fix": "eslint . --ext .ts --fix",
-        "format": "prettier --write \"**/(*.json|*.ts|*.js)\""
+        "format": "prettier --write \"**/(*.json|*.ts|*.js)\"",
+        "pm2": "pm2 start dist/server.js --name a00-server --watch"
     },
     "author": "oynozan",
     "license": "MIT",
