SIGNER_PRIVATE_KEY

--- a/.env.template
+++ b/.env.template
@@ -8,5 +8,6 @@ MONGO_URI="mongodb://localhost:27017/"
 
 NETWORK="testnet" # testnet | mainnet
 RPC_URL="https://rpc-nebulas-testnet.u2u.xyz/"
+SIGNER_PRIVATE_KEY="" # EVM wallet private key
 
 IPFS_API_URL="http://localhost:5001/api/v0"
